--- a/src/components/CreateMemoryModal/CreateMemoryModal.scss
+++ b/src/components/CreateMemoryModal/CreateMemoryModal.scss
@@ -4,20 +4,31 @@
 @use "../../styles/partials/typography" as *;
 
 .create-memory-modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #ffffff;
-  padding: 20px;
-  width: 80%;
-  max-width: 500px;
-  border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 0, 255, 0);
+
+  &__wrap {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff;
+    padding: 1.25rem;
+    width: 75%;
+    max-width: 40rem;
+    // max-height: 40rem;
+    border-radius: 0.625rem;
+    box-shadow: 0 0.125rem 0.625rem rgba(0, 0, 0, 0.1);
+  }
 
   &__title {
-    font-size: 24px;
-    margin-bottom: 20px;
+    font-size: 1.5rem;
+    margin-bottom: 1.25rem;
   }
 
   &__form {
@@ -26,41 +37,42 @@
   }
 
   &__label {
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
   }
 
   &__textarea,
   &__input {
     width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
+    padding: 0.625rem;
+    margin-bottom: 0.625rem;
+    border: 0.0625rem solid #ddd;
+    border-radius: 0.3125rem;
   }
 
   &__error {
     color: red;
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
   }
 
   &__preview-wrap {
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
   }
 
   &__preview {
     max-width: 100%;
-    max-height: 200px;
+    max-height: 12.5rem;
   }
 
   &__submit-btn {
     background-color: #007bff;
     color: #ffffff;
-    padding: 10px 20px;
+    padding: 0.625rem 1.25rem;
     border: none;
-    border-radius: 5px;
+    border-radius: 0.3125rem;
     cursor: pointer;
+    height: 2.5rem;
 
     &:hover {
       background-color: #0056b3;
@@ -70,109 +82,15 @@
   &__close-btn {
     background-color: #dc3545;
     color: #ffffff;
-    padding: 10px 20px;
+    padding: 0.625rem 1.25rem;
     border: none;
-    border-radius: 5px;
+    border-radius: 0.3125rem;
     cursor: pointer;
-    margin-top: 20px;
+    margin-top: 1.25rem;
+    height: 2.5rem;
 
     &:hover {
       background-color: #c82333;
     }
   }
 }
-
-// .create-memory-modal-overlay {
-//   background-color: rgba(0, 0, 0, 0.5); // Add your custom styles here
-// }
-
-.ReactModal__Overlay {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.75);
-}
-
-// .create-memory-modal {
-//   &__title {
-//     font-size: 1.5rem;
-//   }
-
-//   &__form {
-//     display: flex;
-//     flex-direction: column;
-
-//     &__label {
-//       margin-bottom: 1rem;
-//     }
-
-//     &__textarea,
-//     &__input {
-//       padding: 0.5rem;
-//       margin-bottom: 1rem;
-//     }
-
-//     &__error {
-//       color: red;
-//       margin-bottom: 1rem;
-//     }
-
-//     &__preview {
-//       width: auto;
-//       max-height: 200px;
-//       display: block;
-//       margin-bottom: 1rem;
-//     }
-
-//     preview-wrap {
-//       width: 80%;
-//       margin: 0 auto;
-//       height: 20rem;
-//       display: flex;
-//       justify-content: center;
-//     }
-
-//     &__submit-btn {
-//       padding: 0.5rem;
-//       background-color: #007bff;
-//       color: #fff;
-//       border: none;
-//       cursor: pointer;
-//     }
-//   }
-
-//   &__close-btn {
-//     padding: 0.5rem;
-//     background-color: #ccc;
-//     color: #000;
-//     border: none;
-//     cursor: pointer;
-//   }
-
-//   @media (min-width: 20rem) {
-//     &__form {
-//       width: 90%;
-//       margin: 0 auto;
-//     }
-//   }
-
-//   @media (min-width: 48rem) {
-//     &__form {
-//       width: 70%;
-//     }
-//   }
-
-//   @media (min-width: 80rem) {
-//     &__form {
-//       width: 50%;
-//     }
-//   }
-// }
-// .ReactModal__Content {
-//   overflow-y: auto;
-// }
