--- a/src/components/MemoryCard/MemoryCard.scss
+++ b/src/components/MemoryCard/MemoryCard.scss
@@ -12,17 +12,22 @@
   padding: 1rem;
   margin: 1rem;
   width: 90%;
-  height: 90%;
+  // height: 90%;
   box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+
+  transition: transform 0.3s;
+
+  &:hover {
+    transform: scale(1.05);
+  }
 
   @include tablet-and-desktop {
     width: 45%;
-    height: 45%;
   }
 
   @include desktop {
     width: 30%;
-    height: 60%;
+    // height: 60%;
   }
 
   &__image-wrap {
@@ -30,21 +35,30 @@
     height: 12.5rem;
     overflow: hidden;
     border-radius: 0.325rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     // border-top-right-radius: 0.325rem;
     //padding: 1.3rem;
   }
 
   &__image {
     width: 100%;
-    height: 100%;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+
     object-fit: cover;
     border-radius: 0.325rem;
+    display: block;
     // border-top-right-radius: 0.325rem;
     // border-radius: 0.3125rem;
   }
 
   &__description {
     margin-top: 0.625rem;
+    margin-bottom: 1.5rem;
     text-align: start;
   }
 
@@ -67,38 +81,4 @@
     width: 1rem;
     height: 1rem;
   }
-
-  // &__delete-btn {
-  //   width: 100%;
-  //   height: 1.5rem;
-  //   padding: 0 1.5rem;
-  //   @include mobile-lable-button;
-  //   text-align: center;
-  //   position: relative;
-  //   border: none;
-  //   border-radius: 1.5rem;
-  //   color: $primary-white;
-  //   background-color: $primary-green;
-  //   font-weight: $text-regular;
-  //   cursor: pointer;
-  // }
-
-  // &:hover {
-  //   background-color: $secondary-darkgreen;
-  // }
-
-  // @media (max-width: 20rem) {
-  //   // 320px
-  //   width: 90%;
-  // }
-
-  // @media (min-width: 48rem) and (max-width: 80rem) {
-  //   // 768px - 1280px
-  //   width: 45%;
-  // }
-
-  // @media (min-width: 80rem) {
-  //   // 1280px
-  //   width: 30%;
-  // }
 }
