--- a/src/components/CreateMemoryModal/CreateMemoryModal.scss
+++ b/src/components/CreateMemoryModal/CreateMemoryModal.scss
@@ -3,17 +3,19 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/typography" as *;
 
-.create-memory-modal {
+.create-modal {
   display: flex;
   justify-content: center;
   align-items: center;
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 0, 255, 0);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 10;
 
-  &__wrap {
+  &__content {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -22,7 +24,6 @@
     padding: 1.25rem;
     width: 75%;
     max-width: 40rem;
-    // max-height: 40rem;
     border-radius: 0.625rem;
     box-shadow: 0 0.125rem 0.625rem rgba(0, 0, 0, 0.1);
   }
