--- a/src/components/MemoryCardModal/MemoryCardModal.scss
+++ b/src/components/MemoryCardModal/MemoryCardModal.scss
@@ -3,34 +3,6 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/typography" as *;
 
-// .modal {
-//   display: flex;
-//   justify-content: center;
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   background-color: rgba(0, 0, 0, 0.5);
-//   z-index: 10;
-
-//   &__content {
-//     background: $primary-white;
-//     padding: 1.5rem;
-//     border-radius: 0.2rem;
-//     top: 50%;
-//     position: relative;
-//     transform: translateY(-50%);
-//     max-width: 75%;
-
-//     @include tablet-and-desktop {
-//       min-height: 15rem;
-//       max-height: 20%;
-//       max-width: 38rem;
-//     }
-//   }
-// }
-
 .modal {
   display: flex;
   justify-content: center;
@@ -45,56 +17,52 @@
 
   &__content {
     background: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    padding: 1.25rem;
+    border-radius: 0.625rem;
+    box-shadow: 0 0.125rem 0.3125rem rgba(0, 0, 0, 0.3);
     width: 80%;
-    max-width: 320px; // Mobile
+    max-width: 20rem; // Mobile
     position: relative;
 
     // Tablet
-    @media (min-width: 768px) {
+    @include tablet-and-desktop {
       max-width: 500px;
     }
 
     // Desktop
-    @media (min-width: 1280px) {
+    @include desktop {
       max-width: 800px;
     }
+  }
 
-    &::before {
-      content: "";
-      position: absolute;
-      top: -20px;
-      left: -20px;
-      right: -20px;
-      bottom: -20px;
-      border: 1px solid #000;
-      border-radius: 10px;
-    }
+  &__img-wrap {
+    width: 100%;
+    padding-top: 75%; // For a square image
+    position: relative;
+  }
 
-    .modal__img-wrap {
-      width: 100%;
-      padding-top: 75%; // For a square image
-      position: relative;
+  &__img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+  }
 
-      .modal__img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 5px;
-      }
-    }
+  &__description-wrap {
+    margin-top: 20px;
+  }
 
-    .modal__description-wrap {
-      margin-top: 20px;
-    }
+  &__close-btn-wrap {
+    text-align: right;
+  }
 
-    .modal__close-btn-wrap {
-      text-align: right;
-    }
+  &__close-btn {
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
   }
 }
