--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -13,7 +13,6 @@
     color: #fff;
     text-align: center;
     margin: 0;
-    //padding-top: 1rem;
     display: flex;
     justify-content: center;
     @include tablet-and-desktop {
@@ -44,12 +43,12 @@
   &__nav-list {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 0;
     padding: 0;
 
     @include tablet-and-desktop {
-      padding-left: 5rem;
+      padding-left: 4rem;
     }
   }
 
@@ -86,11 +85,21 @@
     }
   }
 
+  &__nav-home-memories-wrap {
+    padding-left: 2rem;
+    display: flex;
+    justify-content: space-between;
+    gap: 4rem;
+
+    @include tablet-and-desktop {
+      display: flex;
+      justify-content: space-between;
+      gap: 1rem;
+    }
+  }
+
   &__nav-logout-btn-wrap {
-    // display: flex;
-    // justify-content: flex-end;
     width: 100%;
-    // margin-top: 1rem;
   }
 
   &__nav-logout-btn {
@@ -105,7 +114,7 @@
     display: block;
     text-align: center;
     margin-top: -0.4rem;
-    // font-size: 1.325rem;
+    padding-right: 2rem;
 
     &:hover {
       transform: scale(1.1);
@@ -116,7 +125,6 @@
       height: 2.75rem;
       justify-content: center;
       margin-top: -0.7rem;
-      // @include tabdesk-body;
     }
 
     @include desktop {
