--- a/src/components/MemoryCard/MemoryCard.scss
+++ b/src/components/MemoryCard/MemoryCard.scss
@@ -12,7 +12,7 @@
   padding: 1rem;
   margin: 1rem;
   width: 90%;
-  // height: 90%;
+  height: 38vh;
   box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.2);
 
   transition: transform 0.3s;
@@ -26,8 +26,7 @@
   }
 
   @include desktop {
-    width: 30%;
-    // height: 60%;
+    width: 25%;
   }
 
   &__image-wrap {
@@ -38,9 +37,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
-    // border-top-right-radius: 0.325rem;
-    //padding: 1.3rem;
   }
 
   &__image {
@@ -52,8 +48,6 @@
     object-fit: cover;
     border-radius: 0.325rem;
     display: block;
-    // border-top-right-radius: 0.325rem;
-    // border-radius: 0.3125rem;
   }
 
   &__description {
@@ -67,7 +61,6 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    // padding: 0 1rem;
   }
 
   &__timeago {
