--- a/src/pages/UserProfilePage/UserProfilePage.scss
+++ b/src/pages/UserProfilePage/UserProfilePage.scss
@@ -7,7 +7,6 @@
   &__create-memory-btn-wrap {
     display: flex;
     justify-content: center;
-    // margin-left: 2rem;
     padding: 2rem;
 
     @include tablet-and-desktop {
@@ -29,15 +28,16 @@
     border-radius: 0.3rem;
     cursor: pointer;
     width: 80%;
+    font-size: 1rem;
 
     @include tablet-and-desktop {
-      width: 40%;
+      width: 30%;
       height: 2.75rem;
       justify-content: center;
     }
 
     @include desktop {
-      width: 30%;
+      width: 25%;
     }
 
     &:hover {
