--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -40,12 +40,12 @@ $btn-lineheight: 1.25rem; //20px
 
 /* Color */
 
-$primary-black: #323232;
+$primary-black: #80614c;
 $primary-silver: #afafaf;
 $primary-white: #ffffff;
-$primary-green: #008f8c;
+$primary-green: #1cdedb;
 
-$secondary-darkblack: #000000;
-$secondary-mercury: #e1e1e1;
+$secondary-darkblack: #673320;
+$secondary-mercury: #f0e3cd;
 $secondary-alabaster: #fafafa;
-$secondary-darkgreen: #015958;
+$secondary-darkgreen: #11a9a6;
