--- a/src/components/MemoryCard/MemoryCard.scss
+++ b/src/components/MemoryCard/MemoryCard.scss
@@ -12,7 +12,7 @@
   padding: 1rem;
   margin: 1rem;
   width: 90%;
-  height: 38vh;
+  height: 25rem;
   box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.2);
 
   transition: transform 0.3s;
@@ -29,9 +29,18 @@
     width: 25%;
   }
 
+  &__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    width: 100%;
+    height: 100%;
+  }
+
   &__image-wrap {
     width: 100%;
-    height: 12.5rem;
+    height: 50%;
     overflow: hidden;
     border-radius: 0.325rem;
     display: flex;
@@ -41,7 +50,7 @@
 
   &__image {
     width: 100%;
-    height: auto;
+    height: 100%;
     max-width: 100%;
     max-height: 100%;
 
@@ -50,10 +59,19 @@
     display: block;
   }
 
+  &__description-wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 30%;
+  }
+
   &__description {
-    margin-top: 0.625rem;
-    margin-bottom: 1.5rem;
+    // margin-top: 0.625rem;
+    // margin-bottom: 1.5rem;
     text-align: start;
+    margin: 0;
   }
 
   &__timeago-deletebtn-wrap {
@@ -61,6 +79,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    height: 10%;
   }
 
   &__timeago {
