Add delete logo

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -69,6 +69,7 @@
     &:hover {
       transform: scale(1.1);
       font-weight: bold;
+      text-decoration: underline;
     }
 
     @include tablet-and-desktop {
