--- a/src/components/MemoryCardModal/MemoryCardModal.scss
+++ b/src/components/MemoryCardModal/MemoryCardModal.scss
@@ -60,7 +60,8 @@
   &__close-btn {
     background: none;
     border: none;
-    font-size: 1.5rem;
+    font-size: 1rem;
     cursor: pointer;
+    color: $primary-silver;
   }
 }
