Update styles in Header, MemoryCard

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -138,6 +138,7 @@
     justify-content: center;
     width: 100%;
     margin-top: 1rem;
+    font-size: 1rem;
 
     @include tablet-and-desktop {
       width: 100%;
