--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -45,7 +45,7 @@ $primary-silver: #afafaf;
 $primary-white: #ffffff;
 $primary-green: #1cdedb;
 
-$secondary-darkblack: #673320;
+$secondary-darkblack: #6e5341;
 $secondary-mercury: #f0e3cd;
 $secondary-alabaster: #fafafa;
 $secondary-darkgreen: #11a9a6;
