--- a/src/components/MemoryCard/MemoryCard.scss
+++ b/src/components/MemoryCard/MemoryCard.scss
@@ -6,7 +6,8 @@
 .memory-card {
   display: flex;
   flex-direction: column;
-  //align-items: center;
+  background-color: white;
+
   border: 0.0625rem solid #ccc;
   border-radius: 0.325rem;
   padding: 1rem;
@@ -68,8 +69,6 @@
   }
 
   &__description {
-    // margin-top: 0.625rem;
-    // margin-bottom: 1.5rem;
     text-align: start;
     margin: 0;
   }
