--- a/src/pages/LoginPage/LoginPage.scss
+++ b/src/pages/LoginPage/LoginPage.scss
@@ -8,22 +8,47 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: $secondary-mercury;
 
+  &__container {
+    background-image: url(../../assets/images/5.png);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+
+    @include tablet-and-desktop {
+      width: 100%;
+    }
+
+    @include desktop {
+      width: 100%;
+    }
+  }
   &__form-wrap {
+    width: 90%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: end;
+
     padding: 2rem;
     background-color: white;
     border-radius: 0.25rem;
     box-shadow: 0 0.125rem 0.625rem rgba(0, 0, 0, 0.1);
+
+    @include tablet-and-desktop {
+      margin-left: 10rem;
+      width: 45%;
+    }
+
+    @include desktop {
+      margin-left: 40rem;
+      width: 30%;
+      padding: 2.5rem;
+    }
   }
 
   &__form {
     display: flex;
     flex-direction: column;
-    width: 18.75rem;
+    width: 100%;
   }
 
   &__email-wrap {
@@ -38,36 +63,67 @@
 
   &__label {
     color: #333;
-    font-size: 0.9rem;
+    font-size: 1rem;
     width: 100%;
+
+    @include tablet-and-desktop {
+      width: 100%;
+    }
+    @include desktop {
+      width: 100%;
+      font-size: 1.125rem;
+    }
   }
 
   &__input {
-    padding: 0.5rem;
-    margin: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     border: 1px solid #ccc;
     border-radius: 0.25rem;
     font-size: 1rem;
+    height: 2rem;
+
+    @include tablet-and-desktop {
+      width: 100%;
+      font-size: 1.125rem;
+      height: 2.5rem;
+    }
+
+    @include desktop {
+      width: 100%;
+
+      height: 3rem;
+    }
   }
 
   &__button-wrap {
     display: flex;
     justify-content: center;
     width: 100%;
+    margin-top: 1rem;
   }
 
   &__button {
-    padding: 0.75rem;
+    width: 100%;
+    height: 2.5rem;
+
     border: none;
     border-radius: 0.25rem;
     background-color: $primary-black;
     color: white;
     font-size: 1rem;
-    width: 90%;
-    cursor: pointer;
-
     &:hover {
       background-color: $secondary-darkblack;
+    }
+
+    @include tablet-and-desktop {
+      width: 100%;
+      font-size: 1.125rem;
+    }
+
+    @include desktop {
+      font-size: 1.125rem;
+      height: 3rem;
     }
   }
 }
